Add files to change turtlesim background

--- a/src/agitr/CMakeLists.txt
+++ b/src/agitr/CMakeLists.txt
@@ -142,6 +142,7 @@ add_executable(once src/once.cpp)
 add_executable(throttle src/throttle.cpp)
 add_executable(anon src/anon.cpp)
 add_executable(reverse_cmd_vel src/reverse_cmd_vel.cpp)
+add_executable(set_bg_color src/set_bg_color.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -165,6 +166,8 @@ target_link_libraries(once ${catkin_LIBRARIES})
 target_link_libraries(throttle ${catkin_LIBRARIES})
 target_link_libraries(anon ${catkin_LIBRARIES})
 target_link_libraries(reverse_cmd_vel ${catkin_LIBRARIES})
+target_link_libraries(set_bg_color ${catkin_LIBRARIES})
+
 
 #############
 ## Install ##
