Add simple service to spawn a turtle

--- a/src/agitr/CMakeLists.txt
+++ b/src/agitr/CMakeLists.txt
@@ -144,6 +144,7 @@ add_executable(anon src/anon.cpp)
 add_executable(reverse_cmd_vel src/reverse_cmd_vel.cpp)
 add_executable(set_bg_color src/set_bg_color.cpp)
 add_executable(pubvel_with_max src/pubvel_with_max.cpp)
+add_executable(spawn_turtle src/spawn_turtle.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -169,6 +170,8 @@ target_link_libraries(anon ${catkin_LIBRARIES})
 target_link_libraries(reverse_cmd_vel ${catkin_LIBRARIES})
 target_link_libraries(set_bg_color ${catkin_LIBRARIES})
 target_link_libraries(pubvel_with_max ${catkin_LIBRARIES})
+target_link_libraries(spawn_turtle ${catkin_LIBRARIES})
+
 
 #############
 ## Install ##
